# ollama-cli-code-agent

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
ollama_cli_code_agent/: __init__.py  session.py
scripts/: update_readme.py
src/ocla/: __init__.py  cli.py  cli_io.py  config.py  rag.py  session.py  state.py  tools.py  util.py
src/ocla/providers/: __init__.py  ollama.py  ollama_provider.py  openai.py  openai_provider.py
src/ocla/tools/: __init__.py  file_system.py  git.py
src/okda/: session.py
src/tiktoken/: __init__.py
tests/: __init__.py  conftest.py  docker-compose.yml  helpers.py  test_access.py  test_cli.py  test_config.py  test_git_tools.py  test_session_provider.py  test_session_storage.py  test_session_tokens.py  test_tools.py
