[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ocla"
version = "0.1.0"
description = "CLI agent using ollama for local LLMs"
requires-python = ">=3.9"
authors = [{name = "Example", email = "example@example.com"}]
dependencies = [
    "ollama",
    "humanize",
    "rich",
    "tzlocal",
    "GitPython",
    "tiktoken",
]

[project.scripts]
ocla = "ocla.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "black"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
