[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ocla"
version = "0.1.0"
description = "CLI coding agent using ollama for local LLMs"
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Vaeryn", email = "dev@vaeryn.co.uk"}]
dependencies = [
    "ollama",
    "openai",
    "humanize",
    "rich",
    "tzlocal",
    "GitPython",
    "tiktoken",
]

[project.scripts]
ocla = "ocla.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "black"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false
